v2 layout ok, antes de incluir pg promocoes

--- a/CPTur/Views/Contatoes/Edit.cshtml
+++ b/CPTur/Views/Contatoes/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edição de contatos</h1>
 
-<h4>Contato</h4>
+<h4>Realize a edição de contatos apenas sob solicitação do cliente</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -51,7 +51,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-light" asp-action="Index">Voltar</a>
 </div>
 
 @section Scripts {
