--- a/CPTur/Views/Contatoes/Create.cshtml
+++ b/CPTur/Views/Contatoes/Create.cshtml
@@ -14,10 +14,14 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Assunto" class="control-label"></label>
-                <input asp-for="Assunto" class="form-control" />
-                <span asp-validation-for="Assunto" class="text-danger"></span>
+                <label asp-for="Assunto" for="exampleFormControlSelect1">Assunto</label>
+                <select asp-for="Assunto" class="form-control" id="exampleFormControlSelect1">
+                    <option>Selecione</option>
+                    <option>Contato</option>
+                    <option>Orçamento</option>
+                </select>
             </div>
+
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
@@ -28,16 +32,32 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <label asp-for="QtPessoas" class="control-label"></label>
-                <input asp-for="QtPessoas" class="form-control" />
-                <span asp-validation-for="QtPessoas" class="text-danger"></span>
+                <label asp-for="QtPessoas" for="exampleFormControlSelect1">Selecione a quantidade de pessoas</label>
+                <select asp-for="QtPessoas" class="form-control" id="exampleFormControlSelect1">
+                    <option>0</option>
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                </select>
             </div>
+
             <div class="form-group">
-                <label asp-for="Destino" class="control-label"></label>
-                <input asp-for="Destino" class="form-control" />
-                <span asp-validation-for="Destino" class="text-danger"></span>
+                <label asp-for="Destino" for="exampleFormControlSelect1">Selecione o Destino</label>
+                <select asp-for="Destino" class="form-control" id="exampleFormControlSelect1">
+                    <option>Nenhum</option>
+                    <option>Moscou</option>
+                    <option>Zurique</option>
+                    <option>Santa Cruz de Tenerife</option>
+                    <option>Siracusa</option>
+                    <option>Jalapão</option>
+                    <option>Gramado</option>
+                </select>
             </div>
+            
             <div class="form-group">
                 <label asp-for="Mensagem" class="control-label"></label>
                 <input asp-for="Mensagem" class="form-control" />
