--- a/CPTur/Views/Destinoes/Delete.cshtml
+++ b/CPTur/Views/Destinoes/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Excluir Destino</h1>
 
-<h3>Para apagar este Destino clique em Apagar</h3>
+<h3>Para apagar este destino clique em Apagar</h3>
 <div>
     <hr />
     <dl class="row">
@@ -38,7 +38,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Apagar" class="btn btn-danger" /> |
-        <a asp-action="Index">Voltar</a>
+        <input type="submit" value="Apagar" class="btn btn-danger" />
+        <a class="btn btn-light" asp-action="Index">Voltar</a>
     </form>
 </div>
