--- a/CPTur/Views/Destinoes/Details.cshtml
+++ b/CPTur/Views/Destinoes/Details.cshtml
@@ -37,6 +37,6 @@
     </dl>
 </div>
 <div>
-    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Voltar</a>
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+    <a class="btn btn-light" asp-action="Index">Voltar</a>
 </div>
