--- a/CPTur/Views/Destinoes/Edit.cshtml
+++ b/CPTur/Views/Destinoes/Edit.cshtml
@@ -49,7 +49,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Voltar</a>
+    <a class="btn btn-light" asp-action="Index">Voltar</a>
 </div>
 
 @section Scripts {
