v3 ultimas alteracoes de layout antes da final

--- a/CPTur/Views/Clientes/Edit.cshtml
+++ b/CPTur/Views/Clientes/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Alterar informações do Cliente</h1>
+<h1 class="mt-3 mb-3">Alterar informações do Cliente</h1>
 
 
 <hr />
