--- a/CPTur/Views/Contatoes/Create.cshtml
+++ b/CPTur/Views/Contatoes/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Contato ou Orçamento</h1>
+<h1 class="mt-3 mb-3">Contato ou Orçamento</h1>
 
     <p>Envie sua mensagem que entraremos em contato em breve. </p>
 
