--- a/CPTur/Views/Contatoes/Delete.cshtml
+++ b/CPTur/Views/Contatoes/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Excluir Contato</h1>
+<h1 class="mt-3 mb-3">Excluir Contato</h1>
 
 <h3>Para excluir este contato clique em Apagar</h3>
 <div>
