--- a/CPTur/Views/Contatoes/Details.cshtml
+++ b/CPTur/Views/Contatoes/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Detalhes do Contato</h1>
+<h1 class="mt-3 mb-3">Detalhes do Contato</h1>
 
 <div>
     
