--- a/CPTur/Views/Destinoes/Create.cshtml
+++ b/CPTur/Views/Destinoes/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Incluir Destino</h1>
+<h1 class="mt-3 mb-3">Incluir Destino</h1>
 
 
 <hr />
@@ -48,7 +48,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Voltar</a>
+    <a class="btn btn-light" asp-action="Index">Voltar</a>
 </div>
 
 @section Scripts {
