--- a/CPTur/Views/Destinoes/Details.cshtml
+++ b/CPTur/Views/Destinoes/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Detalhes sobre o Destino</h1>
+<h1 class="mt-3 mb-3">Detalhes sobre o Destino</h1>
 
 <div>
     
