--- a/CPTur/Views/Clientes/Delete.cshtml
+++ b/CPTur/Views/Clientes/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Excluir Cliente</h1>
+<h1 class="mt-3 mb-3">Excluir Cliente</h1>
 
 <h3>Para excluir este Cliente clique em Apagar</h3>
 <div>
