--- a/CPTur/Views/Clientes/Index.cshtml
+++ b/CPTur/Views/Clientes/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Clientes</h1>
+<h1 class="mt-3 mb-3">Clientes</h1>
 
 <p>
     <a class="btn btn-primary" asp-action="Create">Incluir cliente</a>
