--- a/CPTur/Views/Contatoes/Edit.cshtml
+++ b/CPTur/Views/Contatoes/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edição de contatos</h1>
+<h1 class="mt-3 mb-3">Edição de contatos</h1>
 
 <h4>Realize a edição de contatos apenas sob solicitação do cliente</h4>
 <hr />
@@ -44,7 +44,7 @@
                 <span asp-validation-for="Mensagem" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
             </div>
         </form>
     </div>
