--- a/CPTur/Views/Contatoes/Index.cshtml
+++ b/CPTur/Views/Contatoes/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Lista de Contatos</h1>
+<h1 class="mt-3 mb-3">Lista de Contatos</h1>
 
 
 <table class="table">
