--- a/CPTur/Views/Destinoes/Delete.cshtml
+++ b/CPTur/Views/Destinoes/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Excluir Destino</h1>
+<h1 class="mt-3 mb-3">Excluir Destino</h1>
 
 <h3>Para apagar este destino clique em Apagar</h3>
 <div>
