--- a/CPTur/Views/Destinoes/Edit.cshtml
+++ b/CPTur/Views/Destinoes/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Alterar informações do Destino</h1>
+<h1 class="mt-3 mb-3">Alterar informações do Destino</h1>
 
 <hr />
 <div class="row">
