--- a/CPTur/wwwroot/css/site.css
+++ b/CPTur/wwwroot/css/site.css
@@ -12,6 +12,7 @@ a {
   color: #0366d6;
 }
 
+
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
@@ -60,7 +61,7 @@ html {
 
 header {
     background: url("/css/imagens/sira_m.jpg") no-repeat;
-    height: 80vh;
+    height: 70vh;
     box-shadow: 0px 0px 10px 5px rgb(0, 0, 0, 0.575);
     background-size: cover;
     filter: brightness(95%);
@@ -76,6 +77,11 @@ body {
     margin-top: 2px;
     margin-bottom: 2px;
 }
+
+.card {
+    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.575);
+}
+
 .footer {
     position: absolute;
     bottom: 0;
