--- a/CPTur/Views/Contatoes/Create.cshtml
+++ b/CPTur/Views/Contatoes/Create.cshtml
@@ -4,9 +4,37 @@
     ViewData["Title"] = "Create";
 }
 
+<header>
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light">
+        <div class="container">
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">CPTur</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <ul class="navbar-nav flex-grow-1">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="AcessoCliente" asp-action="Index">Destinos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="AcessoCliente" asp-action="Promocoes">Promocoes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Contatoes" asp-action="Create">Contato</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+
 <h1 class="mt-3 mb-3">Contato ou Orçamento</h1>
 
-    <p>Envie sua mensagem que entraremos em contato em breve. </p>
+<p>Envie sua mensagem que entraremos em contato em breve. </p>
 
 <hr />
 <div class="row">
@@ -57,7 +85,7 @@
                     <option>Gramado</option>
                 </select>
             </div>
-            
+
             <div class="form-group">
                 <label asp-for="Mensagem" class="control-label"></label>
                 <input asp-for="Mensagem" class="form-control" />
@@ -70,9 +98,6 @@
     </div>
 </div>
 
-<div>
-    <a class="btn btn-light" asp-action="Index">Voltar</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
